    * Fixed div by zero error that affected GPU2 clients (thanks to John
      Daiker).
    * Fixed quick refresh crash bug (thanks to John Daiker).
    * Fixed file manager bug with paths containing spaces (thanks to John
      Daiker).
    * Fixed team number and username refresh issue (thanks to John Daiker).
    * Changed client list style and removed "zebra" background colour scheme.

    Windows

    * Fixed cosmetic issue with work/current.xyz using / instead of \.
    * Migrated configuration folder to %APPDATA% to improve behaviour in Vista.
    * Updated installer to add entry to add/remove programs.
    * Fixed some minor installer issues.
    * Now built against wxWidgets 2.8.9.

    Linux

    * Fixed an issue with latest GCC and inline functions (thanks to KB3LWJ).
    * Fixed compiler warnings about deprecated conversions (thanks to John
      Daiker).
    * Added configure test to check for ANSI wxWidgets and warn if found.

v2.3.2b (11/04/08)

    General

    * Fixed bug that caused xyz files to be saved with no project number.
    * A badly formatted psummary no longer produces error message, rather logs a
      warning silently to the log.
    * Added Italian translation.
    * Fixed bug with fractional deadlines still being truncated.
    * Checking for updates from the menu now informs you if no update was found.
    * Added GPUv2 core support.
    * Fixed ETA calculation for WUs with less than 100 % markers.
    * Non-standard system tray menu items moved to icon tooltip.

    Windows

    * Maximised restoring from system tray now works. Finally.
    * Updated MSVC project to version 9.
    * Fixed display of ç character in François.

    OS X

    * Fixed log window not scrolling.
    * Fixed line encoding bug when monitoring MSW clients.
    * Altered progress bar to decrease CPU usage.

v2.3.2a (16/02/08)

    General

    * Added German translation.
    * Fixed endian swap bug when monitoring PPC Macs.